--- a/index.html
+++ b/index.html
@@ -20,6 +20,68 @@
 <body>
 <div id="game-container"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="game.js"></script>
+<script>
+    // Create the game container
+    const gameContainer = document.getElementById('game-container');
+
+    // Create the Three.js scene, camera, and renderer
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({
+        canvas: document.createElement('canvas'),
+        antialias: true
+    });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    gameContainer.appendChild(renderer.domElement);
+
+    // Create the road
+    const roadGeometry = new THREE.PlaneGeometry(1000, 1000);
+    const roadMaterial = new THREE.MeshBasicMaterial({ color: 0xffffff });
+    const road = new THREE.Mesh(roadGeometry, roadMaterial);
+    road.rotation.x = -Math.PI / 2;
+    road.position.set(0, -5, 0);
+    scene.add(road);
+
+    // Create the cars
+    const carGeometry = new THREE.BoxGeometry(2, 1, 1);
+    const carMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+    const car1 = new THREE.Mesh(carGeometry, carMaterial);
+    car1.position.set(0, 1, -5);
+    scene.add(car1);
+
+    const car2 = new THREE.Mesh(carGeometry, carMaterial);
+    car2.position.set(-5, 1, -5);
+    scene.add(car2);
+
+    const car3 = new THREE.Mesh(carGeometry, carMaterial);
+    car3.position.set(5, 1, -5);
+    scene.add(car3);
+
+    const car4 = new THREE.Mesh(carGeometry, carMaterial);
+    car4.position.set(-10, 1, -5);
+    scene.add(car4);
+
+    const car5 = new THREE.Mesh(carGeometry, carMaterial);
+    car5.position.set(10, 1, -5);
+    scene.add(car5);
+
+    // Set the camera position
+    camera.position.set(0, 5, 10);
+
+    // Add some lighting to the scene
+    const ambientLight = new THREE.AmbientLight(0x444444);
+    scene.add(ambientLight);
+
+    const directionalLight = new THREE.DirectionalLight(0xffffff);
+    directionalLight.position.set(0, 10, 10);
+    scene.add(directionalLight);
+
+    // Animate the scene
+    function animate() {
+        requestAnimationFrame(animate);
+        renderer.render(scene, camera);
+    }
+    animate();
+</script>
 </body>
 </html>
